enhanced get products by category controller
